restructure project layout and work on Lexer