@@ -17,13 +17,16 @@ plugins {
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
     // This dependency is used by the application.
-    implementation 'com.google.guava:guava:27.1-jre'
-    implementation 'org.fusesource.jansi:jansi:1.18'
+    implementation 'com.google.guava:guava:28.1-jre'
+
+    // color printing for nice error messages
+    implementation "com.github.tomas-langer:chalk:1.0.2"
+
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 
@@ -38,4 +41,16 @@ jar {
 application {
     // Define the main class for the application
     mainClassName = 'konrad.App'
+}
+//enable java 12 features
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+//enable java 12 features for tests
+test {
+    jvmArgs(['--enable-preview'])
+}
+
+run {
+    jvmArgs(['--enable-preview'])
 }
